# Library_Management_System

./: readme.md
lms_backend/: .gitignore  pyproject.toml
lms_backend/account/: models.py  urls.py  views.py
lms_backend/lms/: models.py  serialzer.py  urls.py  views.py
lms_backend/lms/migrations/: 0001_initial.py
lms_backend/lms_backend/: settings.py  urls.py
lms_frontend/: index.html  package-lock.json  package.json  readme.md  vite.config.js
lms_frontend/src/: App.vue  main.js
lms_frontend/src/router/: index.js
lms_frontend/src/views/home/: index.vue
