[project]
name = "lms-backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiosmtpd==1.4.6",
    "django>=5.2",
    "django-extensions==4.1",
    "django-stubs==5.1.3",
    "djangorestframework==3.16.0",
    "mysqlclient==2.2.7",
    "sshtunnel>=0.4.0",
]
